--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "face-api.js": "^0.22.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-player": "2.16",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
